--- a/src/content/docs/builders/chain-operators/submit-metadata.mdx
+++ b/src/content/docs/builders/chain-operators/submit-metadata.mdx
@@ -41,40 +41,50 @@ If you run into any trouble you can join us on Discord!
 
 3. ##### Upload logos
 	Upload a `png` or `gif` file (at least 400 x 200px) containing your chain logo to menu:metadata[mainnet > logos > CHAIN_NAME.png]. For example: `elated-tan-skat.png` 
+	
+	<div className="center-image-container">
 	<Image
 		src="https://raw.githubusercontent.com/skalenetwork/skale-network/master/metadata/mainnet/logos/elated-tan-skat.png"
 		alt="Europa SKALE Chain Icon"
 		height={150}
 		width={150} />
+	</div>
+	**For SKALE Hubs only** 
 
-4. ##### *For SKALE Hubs only 
-
-	upload a `png` or `gif` logos for each app on that chain to menu:metadata[mainnet > logos > CHAIN_NAME-APP_NAME.png]. For example: `elated-tan-skat-ruby.png` 
-	<Image
-		src="https://raw.githubusercontent.com/skalenetwork/skale-network/master/metadata/mainnet/icons/elated-tan-skat-ruby.svg"
-		alt="Ruby Exchange Icon"
-		height={150}
-		width={150} />
-
-5. ##### Upload icons
-	Upload a `svg` (only svg!) containing your chain icon to menu:metadata[mainnet > icons > CHAIN_NAME.svg]. For example: `elated-tan-skat.svg`
-
-	<Image
-		src="https://raw.githubusercontent.com/skalenetwork/skale-network/0b4181a26db96d05f66fe529dbef84328c256796/metadata/mainnet/icons/elated-tan-skat.svg"
-		alt="Europa SKALE Chain Icon"
-		height={150}
-		width={150} />
-
-6. ##### *For SKALE Hubs only 
-
-	Upload a `svg` (only svg!) icons for each app on that chain to menu:metadata[mainnet > icons > CHAIN_NAME-APP_NAME.svg]. For example: `elated-tan-skat-ruby.svg`
+	Upload a `png` or `gif` logos for each app on that chain to menu:metadata[mainnet > logos > CHAIN_NAME-APP_NAME.png]. For example: `elated-tan-skat-ruby.png` 
+	
+	<div className="center-image-container">
 	<Image
 		src="https://raw.githubusercontent.com/skalenetwork/skale-network/0b4181a26db96d05f66fe529dbef84328c256796/metadata/mainnet/icons/elated-tan-skat-ruby.svg"
 		alt="Ruby Exchange Icon"
-		height={150}
-		width={150} />
+		height={100}
+		width={100} />
+	</div>
 
-7. ##### Submit a PR and include any additional context if needed.
+4. ##### Upload icons
+	Upload a `svg` (only svg!) containing your chain icon to menu:metadata[mainnet > icons > CHAIN_NAME.svg]. For example: `elated-tan-skat.svg`
+
+	<div className="center-image-container">
+	<Image
+		src="https://raw.githubusercontent.com/skalenetwork/skale-network/0b4181a26db96d05f66fe529dbef84328c256796/metadata/mainnet/icons/elated-tan-skat.svg"
+		alt="Europa SKALE Chain Icon"
+		height={50}
+		width={50} />
+	</div>
+
+	**For SKALE Hubs only** 
+
+	Upload a `svg` (only svg!) icons for each app on that chain to menu:metadata[mainnet > icons > CHAIN_NAME-APP_NAME.svg]. For example: `elated-tan-skat-ruby.svg`
+	
+	<div className="center-image-container">
+	<Image
+		src="https://raw.githubusercontent.com/skalenetwork/skale-network/0b4181a26db96d05f66fe529dbef84328c256796/metadata/mainnet/icons/elated-tan-skat-ruby.svg"
+		alt="Ruby Exchange Icon"
+		height={50}
+		width={50} />
+	</div>
+	
+5. ##### Submit a PR and include any additional context if needed.
 </Steps>
 
 ## Submitting Metadata
