--- a/src/content/docs/builders/tools/contracts/remix.mdx
+++ b/src/content/docs/builders/tools/contracts/remix.mdx
@@ -73,7 +73,7 @@ contract HelloSKALE {
 
 3. #### Contract Deployement
 
-    <Image src={remixBtnDeploy} alt="Remix Contrac Deployment"/>
+    <Image src={remixBtnDeploy} alt="Remix Contract Deployment"/>
     Select the deploy button to have your contract available on the selected SKALE Chain
 
 
