add partner and industry wallets

--- a/src/content/docs/builders/tools/wallets/aggregator/rainbowkit.mdx
+++ b/src/content/docs/builders/tools/wallets/aggregator/rainbowkit.mdx
@@ -30,7 +30,7 @@ In addition to managing wallet connections and disconnections, RainbowKit suppor
         </TabItem>
         <TabItem label="yarn">
         ```shell
-        yarn create @rainbow-me/rainbowkit
+        yarn add @rainbow-me/rainbowkit
         ```
         </TabItem>
     </Tabs>
