--- a/src/content/docs/builders/tools/wallets/aggregator.mdx
+++ b/src/content/docs/builders/tools/wallets/aggregator.mdx
@@ -5,6 +5,8 @@ description: Intro to Wallet Aggregators
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import {Content as WalletConnect} from './aggregator/wallet-connect.mdx';
 import {Content as RainbowKit} from './aggregator/rainbowkit.mdx';
+import {Content as ConnectKit} from './aggregator/connectKit.mdx';
+import {Content as Dynamic} from './aggregator/dynamic-xyz.mdx';
 
 
 <Tabs>
@@ -13,5 +15,11 @@ import {Content as RainbowKit} from './aggregator/rainbowkit.mdx';
 </TabItem>
 <TabItem label="Wallet Connect">
 <WalletConnect/>
+</TabItem>
+<TabItem label="ConnectKit">
+<ConnectKit/>
+</TabItem>
+<TabItem label="Dynamic">
+<Dynamic/>
 </TabItem>
 </Tabs>
