--- a/src/content/docs/builders/tools/wallets/custodial.mdx
+++ b/src/content/docs/builders/tools/wallets/custodial.mdx
@@ -4,6 +4,7 @@ description: Intro to Custodial Wallets
 ---
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 import {Content as Stardust} from './custodial/stardust.mdx';
+import {Content as Crossmint} from './custodial/crossmint.mdx';
 import {Content as InvisibleSigners} from './custodial/invisible-signer.mdx';
 
 
@@ -11,6 +12,9 @@ import {Content as InvisibleSigners} from './custodial/invisible-signer.mdx';
 <Tabs>
 <TabItem label="Stardust">
 <Stardust/>
+</TabItem>
+<TabItem label="Crossmint">
+<Crossmint/>
 </TabItem>
 <TabItem label="Invisible Signer">
 <InvisibleSigners/>
