wallets fix + Chain Availability

--- a/src/content/docs/builders/node-operators/archive-node.mdx
+++ b/src/content/docs/builders/node-operators/archive-node.mdx
@@ -6,12 +6,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
-<ToolLayout
-    introParagraph="Within the realm of nodes, there are distinct types tailored for specific purposes. For instance, archive nodes specialize in storing comprehensive historical data of the blockchain and providing it upon request."
-    toolName="Archive Node"
-    toolLink=""
-    toolDocsLink=""
->
+Within the realm of nodes, there are distinct types tailored for specific purposes. For instance, archive nodes specialize in storing comprehensive historical data of the blockchain and providing it upon request.
 
 This sets them apart from full nodes, which focus on recent blockchain states, and light nodes, primarily reliant on data from full nodes.
 
@@ -163,6 +158,3 @@ Arguments:
 :::tip[Note]
 You can just update a file with environment variables used during `sudo skale sync-node init`.
 :::
-
-
-</ToolLayout>
