--- a/src/content/docs/builders/tools/bridges/meson-fi.mdx
+++ b/src/content/docs/builders/tools/bridges/meson-fi.mdx
@@ -8,6 +8,7 @@ import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 <ToolLayout
     introParagraph="Meson Finance is a stable coin bridge that connects SKALE chains with more than 35 different chains, enabling to move different stable coins (USDC and USDT) in and out of SKALE network"
     toolName="Meson.fi"
+    availability="SKALE Europa,SKALE Calypso,SKALE Nebula"
     toolLink="https://meson.dev/introduction"
     toolDocsLink="https://meson.dev/introduction"
 >
