--- a/src/content/docs/builders/tools/contracts/remix.mdx
+++ b/src/content/docs/builders/tools/contracts/remix.mdx
@@ -12,13 +12,12 @@ import remixBtnDeploy from '../../../../../assets/remix-dply-btn.png';
 
 
 <ToolLayout
-	introParagraph="Remix is a comprehensive toolset designed for contract development, suitable for users of all knowledge levels. It also serves as a learning lab for teaching and experimenting with EVM blockchains."
+	introParagraph="Remix is a comprehensive toolset designed for contract development, suitable for users of all knowledge levels. It also serves as a learning lab for teaching and experimenting with EVM blockchains.
+    With Remix, you can choose an environment to work from: either compiling your contracts using a sandbox blockchain in your browser (JavaScript VM), or using Injected Web3 that hands off the interface to a provider such as MetaMask, that in turn connects to your SKALE Chain endpoint."
 	toolName="Remix"
 	toolLink="https://remix.ethereum.org/"
 	toolDocsLink="https://remix-ide.readthedocs.io/en/latest/#"
 >
-
-With Remix, you can choose an environment to work from: either compiling your contracts using a sandbox blockchain in your browser (JavaScript VM), or using Injected Web3 that hands off the interface to a provider such as MetaMask, that in turn connects to your SKALE Chain endpoint.
 
 </ToolLayout>
 
