--- a/src/content/docs/builders/tools/data/subsquid.mdx
+++ b/src/content/docs/builders/tools/data/subsquid.mdx
@@ -6,17 +6,15 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-	introParagraph="Subsquid is a query node framework that can be applied to SKALE Chains."
+	introParagraph="Subsquid is a query node framework that can be applied to SKALE Chains.
+	Subsquid is like an ETL (Extract, Transform, and Load) tool.
+	Developers can use Subsquid to extract SKALE chain data and process EVM logs in one project and serve this data on a GraphQL endpoint."
 	toolName="Subsquid"
+	availability="SKALE Nebula" 
 	toolLink="https://subsquid.io/"
 	toolDocsLink="https://docs.subsquid.io/"
 >
 
-Subsquid is like an ETL (Extract, Transform, and Load) tool.
-
-Developers can use Subsquid to extract SKALE chain data and process EVM logs in one project and serve this data on a GraphQL endpoint.
-
-Currently, Subsquid is available on the following SKALE chains:
 
 | Mainnet Endpoints | Endpoint lookup cmd | Archive Endpoint |
 | --------- | --------- | --------- |
