--- a/src/content/docs/builders/tools/data/the-graph.mdx
+++ b/src/content/docs/builders/tools/data/the-graph.mdx
@@ -191,9 +191,9 @@ For proper compatibility, you must point a Graph node to a SKALE Archive node.
 </Steps>
 </TabItem>
 
-<TabItem label="Graph Node Service">
+{/*<TabItem label="Graph Node Service">
 Coming soon.
-</TabItem>
+</TabItem>*/}
 </Tabs>
 
 
