--- a/src/content/docs/builders/tools/nfts/marketplaces/keepsake.mdx
+++ b/src/content/docs/builders/tools/nfts/marketplaces/keepsake.mdx
@@ -4,16 +4,23 @@ description: Intro to KeepSake
 ---
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
-Keepsake is a marketplace built on two distinct SKALE Chains: **Calypso** and **Nebula**.
-
+<ToolLayout
+    introParagraph="Keepsake is an NFT marketplace that incorporates unique features of the SKALE ecosystem, enhancing user navigation. Notably, it includes an embedded SKALE native bridging feature, allowing users to bridge various tokens between SKALE chains at no cost."
+    toolName="Keepsake"
+    availability="SKALE Calypso,SKALE Nebula"
+    toolLink=""
+    toolDocsLink=""
+>
 
 Some of the main features are:
 
-|SKALE Chains|Payments|Embeded Bridging|Launchpad|
-|-|-|-|-|
-|SKALE Calyspo <br>SKALE Nebula</br>| USDC | SKALE IMA Bridge | No |
+|Payments|Embeded Bridging|Launchpad|
+|-|-|-|
+| USDC | SKALE IMA Bridge | No |
 
 
 For more information please check one of the two marketplaces:
 - [Keepsake Calypso Marketplace](https://skale.keepsake.gg/)
 - [Keepsake Nebula Marketplace](https://nskale.keepsake.gg/)
+
+</ToolLayout>
