--- a/src/content/docs/builders/tools/nfts/marketplaces/pixelrealm.mdx
+++ b/src/content/docs/builders/tools/nfts/marketplaces/pixelrealm.mdx
@@ -3,13 +3,20 @@ title: Pixel Realm
 description: Intro to Pixelrealm
 ---
 
-Pixel Realm is a multichain marketplace integrated on the **SKALE Nebula Hub**.
+import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+
+<ToolLayout
+    introParagraph="Pixel Realm is a multichain NFT marketplace and launchpad."
+    toolName="Keepsake"
+    availability="SKALE Nebula"
+    toolLink="https://app.pixelrealm.io/"
+    toolDocsLink="https://app.pixelrealm.io/"
+>
 
 Some of the main features are:
 
-|SKALE Chains|Payments|Embeded Bridging|Launchpad|
-|-|-|-|-|
-|SKALE Nebula| USDC | No | [Yes](https://app.pixelrealm.io/launch/) |
+|Payments|Embeded Bridging|Launchpad|
+|-|-|-|
+| USDC | No | [Yes](https://app.pixelrealm.io/launch/) |
 
-
-For more information please the [marketplace](https://app.pixelrealm.io/).
+</ToolLayout>
