--- a/src/content/docs/builders/tools/nfts/nft-minting/kredeum.mdx
+++ b/src/content/docs/builders/tools/nfts/nft-minting/kredeum.mdx
@@ -7,6 +7,7 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 <ToolLayout
     introParagraph="Kredeum is a factory to create, buy, sell & swap NFTs with your own collections."
     toolName="Kredeum"
+    availability="SKALE Calypso"
     toolLink="https://www.kredeum.com/"
     toolDocsLink="https://www.kredeum.com/"
 >
