--- a/src/content/docs/builders/tools/wallets/aggregator/connectKit.mdx
+++ b/src/content/docs/builders/tools/wallets/aggregator/connectKit.mdx
@@ -7,13 +7,12 @@ import { Steps } from "@astrojs/starlight/components";
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 <ToolLayout
-    introParagraph="ConnectKit is a react component library designed for integrating a wallet with dApps."
+    introParagraph="ConnectKit is a react component library designed for integrating a wallet with dApps.
+    It supports a wide range of popular connectors and blockchains, ensuring a smooth and visually appealing user experience."
     toolName="ConnectKit"
     toolLink="https://docs.family.co/connectkit/getting-started"
     toolDocsLink="https://docs.family.co/connectkit/getting-started"
 >
-
-It supports a wide range of popular connectors and blockchains, ensuring a smooth and visually appealing user experience.
 
 ## Implementation Example
 
