--- a/src/content/docs/builders/tools/wallets/custodial/crossmint.mdx
+++ b/src/content/docs/builders/tools/wallets/custodial/crossmint.mdx
@@ -8,13 +8,14 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 <ToolLayout
     introParagraph="
-Crossmint enables you to create application-specific wallets and provides all necessary blockchain infrastructure for complete use cases, including fetching content, signing transactions, and transferring assets."
+Crossmint enables you to create application-specific wallets and provides all necessary blockchain infrastructure for complete use cases, including fetching content, signing transactions, and transferring assets.
+Create wallets invisibly through their simple APIs for new or existing users. You can use this to quickly enable blockchain without forcing seed phrases and passwords onto users.
+"
     toolName="Crossmint"
+    availability="SKALE Nebula"
     toolLink="https://docs.crossmint.com/wallets/custodial-wallets/overview"
     toolDocsLink="https://docs.crossmint.com/wallets/custodial-wallets/overview"
 >
-
-With Crossmint, you can seamlessly integrate web3 capabilities into your website or app. Create wallets for existing users via API and for new users at sign-up. Additionally, you can build quick, plug-and-play activations with no frontend work required.
 
 ## Implementation Example
 
@@ -22,7 +23,7 @@ With Crossmint, you can seamlessly integrate web3 capabilities into your website
 
 1. ##### Get an API key
 
-    Please visit developer console, select the [staging](https://staging.crossmint.com/signin?callbackUrl=/console) or [production](https://www.crossmint.com/signin?callbackUrl=/console) environment and get your API Key.
+    Please visit developer console, select the [staging/testnet](https://staging.crossmint.com/signin?callbackUrl=/console) or [production/mainnet](https://www.crossmint.com/signin?callbackUrl=/console) environment and get your API Key.
 
 2. ##### Integration
 
