--- a/src/content/docs/builders/tools/wallets/custodial/invisible-signer.mdx
+++ b/src/content/docs/builders/tools/wallets/custodial/invisible-signer.mdx
@@ -6,13 +6,13 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
-    introParagraph="Thanks to the zero gas fees nature of the SKALE chains projects can perform transactions on behalf of the users without compromising the company sustainability by covering huge gas fees costs. In order to achieve the described above, the application can generate on the background a wallet for each user, distribute the free gas token to it and store it on the backend."
+    introParagraph="Thanks to the zero gas fees nature of the SKALE chains projects can perform transactions on behalf of the users without compromising the company sustainability by covering huge gas fees costs. In order to achieve the described above, the application can generate on the background a wallet for each user, distribute the free gas token to it and store it on the backend.
+    Every time a user performs a transaction, the background wallet signs the transaction without the user having idea he just made a on-chain transaction."
     toolName="Invisible Signers"
     toolLink=""
     toolDocsLink=""
 >
 
-Every time a user performs a transaction, the background wallet signs the transaction without the user having idea he just made a on-chain transaction.
 
 ## Implementation Example
 
