--- a/src/content/docs/builders/tools/wallets/non-custodial/ledger.mdx
+++ b/src/content/docs/builders/tools/wallets/non-custodial/ledger.mdx
@@ -6,15 +6,12 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
-    introParagraph="It is a hardware wallet designed for secure cryptocurrency storage. It is a physical device that securely stores the user's private keys, which are essential for accessing and managing their cryptocurrencies."
+    introParagraph="It is a hardware wallet designed for secure cryptocurrency storage. It is a physical device that securely stores the user's private keys, which are essential for accessing and managing their cryptocurrencies.
+    Ledger wallets are known for their emphasis on security, providing an offline storage solution to protect digital assets from online threats such as hacking and malware."
     toolName="Ledger"
     toolLink="https://developers.ledger.com/docs/transport/overview/"
     toolDocsLink="https://developers.ledger.com/docs/transport/overview/"
 >
-
-Ledger wallets are known for their emphasis on security, providing an offline storage solution to protect digital assets from online threats such as hacking and malware.
-
-For more information check the following link https://developers.ledger.com/docs/transport/overview/
 
 ## Implementation Example
 
