--- a/src/content/docs/builders/tools/wallets/non-custodial/metamask.mdx
+++ b/src/content/docs/builders/tools/wallets/non-custodial/metamask.mdx
@@ -6,13 +6,13 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
-    introParagraph="Metamask is a Chromium (Chrome, Brave, and Edge) and Firefox browser add-on that provides a non-custodial Ethereum wallet. An end-user's private key is stored in an encrypted Vault data stored in the browser."
+    introParagraph="Metamask is a Chromium (Chrome, Brave, and Edge) and Firefox browser add-on that provides a non-custodial Ethereum wallet. An end-user's private key is stored in an encrypted Vault data stored in the browser.
+    Metamask allows you to integrate your dApp with SKALE by setting the Network RPC endpoint for your users. "
     toolName="MetaMask"
     toolLink="https://metamask.io/"
     toolDocsLink="https://docs.metamask.io/wallet/"
 >
 
-Metamask allows you to integrate your dApp with SKALE by setting the Network RPC endpoint for your users. 
 
 ## Implementation Example
 
