--- a/src/content/docs/builders/tools/contracts/openzeppelin.mdx
+++ b/src/content/docs/builders/tools/contracts/openzeppelin.mdx
@@ -9,13 +9,12 @@ import { Image } from 'astro:assets';
 import openzeppelin from '../../../../../assets/openzeppelin-wizard.png';
 
 <ToolLayout
-	introParagraph="OpenZeppelin is renowned for its smart contracts, which adhere to industry standards and ensure robust security through comprehensive audits. These features give developers a high level of confidence and reliability when using OpenZeppelin for their projects."
+	introParagraph="OpenZeppelin is renowned for its smart contracts, which adhere to industry standards and ensure robust security through comprehensive audits. These features give developers a high level of confidence and reliability when using OpenZeppelin for their projects.
+    OpenZeppelin contracts implement widely recognized industry standards, such as ERC-721 or ERC-20. Their extensive contracts variety and rigorous security audits make them an excellent starting point for all dApp developers."
 	toolName="OpenZepplin"
 	toolLink="https://docs.openzeppelin.com/contracts/5.x/"
 	toolDocsLink="https://docs.openzeppelin.com/contracts/5.x/"
 >
-
-OpenZeppelin contracts implement widely recognized industry standards, such as ERC-721 or ERC-20. Their extensive contracts variety and rigorous security audits make them an excellent starting point for all dApp developers.
 
 ### Implementation Example
 
