--- a/src/content/docs/builders/tools/libraries/unity/nethereum.mdx
+++ b/src/content/docs/builders/tools/libraries/unity/nethereum.mdx
@@ -6,13 +6,12 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph="Nethereum is a .NET integration library for Ethereum, enabling developers to interact with EVM chains and smart contracts using the C# programming language."
+    introParagraph="Nethereum is a .NET integration library for Ethereum, enabling developers to interact with EVM chains and smart contracts using the C# programming language.
+     It provides a set of APIs and utilities to facilitate communication with the Ethereum blockchain."
     toolName="Nethereum"
     toolLink="https://docs.nethereum.com/en/latest/"
     toolDocsLink="https://docs.nethereum.com/en/latest/ "
 >
-
- It provides a set of APIs and utilities to facilitate communication with the Ethereum blockchain.
 
 The main features of this web3 library are:
 
