--- a/src/content/docs/builders/tools/nfts/nft-apis/reservoir.mdx
+++ b/src/content/docs/builders/tools/nfts/nft-apis/reservoir.mdx
@@ -5,13 +5,14 @@ description: Intro to reservoir NFT API
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph="Reservoir APIs offer comprehensive endpoints for developing NFT applications."
+    introParagraph="Reservoir APIs offer comprehensive endpoints for developing NFT applications.
+    The NFT data APIs provide granular token price data, real-time collection floor price and top bid events, token and collection metadata, and more."
     toolName="Reservoir"
+    availability="SKALE Nebula"
     toolLink="https://docs.reservoir.tools/reference/nebula-nft-api"
     toolDocsLink="https://docs.reservoir.tools/reference/nebula-nft-api"
 >
 
-The NFT data APIs provide granular token price data, real-time collection floor price and top bid events, token and collection metadata, and more.
 
 Some of the supported requests return the following information:
 - Detailed collection metadata, statistics, and market data for collections owned by a user;
