--- a/src/content/docs/builders/tools/nfts/nft-minting/dripverse.mdx
+++ b/src/content/docs/builders/tools/nfts/nft-minting/dripverse.mdx
@@ -5,12 +5,13 @@ description: Intro to Dripverse
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph="Dripverse allows the easy creation of NFTs, collections as well as trade them on their market"
+    introParagraph="Dripverse allows the easy creation of NFTs, collections as well as trade them on their market. 
+    Integration and usage of these utilities can be made available across platforms and multiple chains. With the DripVerse platform, any user can access the utilities by choosing from what the developer ecosystem has created."
     toolName="Dripverse"
+    availability="SKALE Calypso"
     toolLink="https://dripverse.org/"
     toolDocsLink="https://dripverse.org/"
 >
 
-Integration and usage of these utilities can be made available across platforms and multiple chains. With the DripVerse platform, any user can access the utilities by choosing from what the developer ecosystem has created.
 
 </ToolLayout>
