--- a/src/content/docs/builders/tools/payments/on-ramp/transak.mdx
+++ b/src/content/docs/builders/tools/payments/on-ramp/transak.mdx
@@ -7,10 +7,11 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 <ToolLayout
     introParagraph="Transak on-ramp solution allows users to buy crypto assets with fiat."
     toolName="Transak"
+    availability="SKALE Europa"
     toolLink="https://portal.skale.space/onramp"
     toolDocsLink="https://portal.skale.space/onramp"
 >
 
-The Transak On-Ramp integration was done on the SKALE Europa Hub and allows users to purchase Europa USDC with fiat.
+The Transak On-Ramp integration allows users to purchase Europa USDC with fiat.
 
 </ToolLayout>
