--- a/src/content/docs/builders/tools/skale/blockscout.mdx
+++ b/src/content/docs/builders/tools/skale/blockscout.mdx
@@ -6,13 +6,12 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import ToolLayout from "../../../../../components/Tool/ToolLayout.astro";
 
 <ToolLayout
-    introParagraph="Blockscout is a open-source blockchain explorer available for use by any Ethereum Virtual Machine (EVM) chain."
+    introParagraph="Blockscout is a open-source blockchain explorer available for use by any Ethereum Virtual Machine (EVM) chain.
+    Blockscout gives everyone access to essential on-chain data, the ability to interact with smart contracts, and the tools to view and verify transactions quickly and easily."
     toolName="Blockscout"
     toolLink="https://docs.blockscout.com/"
     toolDocsLink="https://docs.blockscout.com/for-developers/deployment/manual-old-ui"
 >
-
-Blockscout gives everyone access to essential on-chain data, the ability to interact with smart contracts, and the tools to view and verify transactions quickly and easily.
 
 Currently all SKALE chains use Blockscout as their block explorer and can be found on [SKALE portal page under chains](https://portal.skale.space/chains).
 
