--- a/src/content/docs/builders/tools/wallets/custodial/stardust.mdx
+++ b/src/content/docs/builders/tools/wallets/custodial/stardust.mdx
@@ -3,15 +3,18 @@ title: Stardust
 description: Intro to Stardust
 ---
 import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
+import { Badge } from '@astrojs/starlight/components';
+import { Aside } from '@astrojs/starlight/components';
 
 <ToolLayout
-    introParagraph="Stardust solution allows developers to quickly create custodial wallets, manage their NFTs, and monetize their collections on a robust marketplace."
+    introParagraph="Stardust solution allows developers to quickly create custodial wallets.
+	With this solution it's possible to create a frictionless user onboarding experience, by removing the need for them to manage their own private keys.
+	"
     toolName="Stardust"
     toolLink="https://docs.stardust.gg/docs"
     toolDocsLink="https://docs.stardust.gg/docs"
 >
 
-With this solution it's possible to create a frictionless user onboarding experience, by removing the need for them to manage their own private keys.
 
 ## Implementation Example 
 
