--- a/src/content/docs/builders/tools/wallets/mpc/web3auth.mdx
+++ b/src/content/docs/builders/tools/wallets/mpc/web3auth.mdx
@@ -6,13 +6,12 @@ import ToolLayout from "../../../../../../components/Tool/ToolLayout.astro";
 import { Steps } from "@astrojs/starlight/components";
 
 <ToolLayout
-    introParagraph="Pluggable wallet infrastructure for Web3 wallets and applications. It streamlines the onboarding of both mainstream and crypto native users in under a minute by providing experiences that they're most comfortable with."
+    introParagraph="Pluggable wallet infrastructure for Web3 wallets and applications. It streamlines the onboarding of both mainstream and crypto native users in under a minute by providing experiences that they're most comfortable with.
+    Web3Auth's MPC-based wallet management infrastructure provides secure, non-custodial wallet management, where users maintain control of their cryptographic key pair. The login service only accesses a single share, preventing the provider from retrieving the user's wallet independently."
     toolName="Web3Auth"
     toolLink="https://web3auth.io/"
     toolDocsLink="https://web3auth.io/docs/connect-blockchain/skale"
 >
-
-Web3Auth's MPC-based wallet management infrastructure provides secure, non-custodial wallet management, where users maintain control of their cryptographic key pair. The login service only accesses a single share, preventing the provider from retrieving the user's wallet independently.
 
 ## Implementation Example
 
