--- a/src/content/docs/builders/chain-operators/administrative-contracts.mdx
+++ b/src/content/docs/builders/chain-operators/administrative-contracts.mdx
@@ -2,10 +2,14 @@
 title: Chain Operators Overview
 description: Overview for operators of SKALE Chains 
 ---
+import { Aside } from '@astrojs/starlight/components';
+
 
 The following introduces the Default Contracts SKALE Chain owners can manage.
 
-> This does not include IMA or SKALE Manager contracts
+<Aside>
+This does not include IMA or SKALE Manager contracts
+</Aside>
 
 ## Config Controller
 
@@ -24,7 +28,7 @@ Operators can reserve space for other addresses.
 ## Marionette
 
 Marionette is the default owner of a SKALE Chain when setup with a multisig.
-Checkout the [Architecture](./architecture.mdx#who-is-the-skale-chain-owner) to learn more.
+Checkout the [Architecture](./architecture#who-is-the-skale-chain-owner) to learn more.
 
 ## Multisig Wallet
 
