--- a/src/content/docs/builders/chain-operators/submit-metadata.mdx
+++ b/src/content/docs/builders/chain-operators/submit-metadata.mdx
@@ -15,7 +15,8 @@ You can follow the steps below to add your SKALE Chain to the community repo.
 If you run into any trouble you can join us on Discord!
 
 <Steps>
-1. ##### Fork the skale-network community repo: https://github.com/skalenetwork/skale-network/fork
+1. ##### Fork the skale-network community repo: 
+	https://github.com/skalenetwork/skale-network/fork
 2. ##### Append your chain data to menu:metadata[mainnet > chains.json], for example:
 
 	```json
@@ -91,7 +92,8 @@ If you run into any trouble you can join us on Discord!
 
 <Steps>
 
-1. ##### Fork the ethereum-lists repo: https://github.com/ethereum-lists/chains/fork
+1. ##### Fork the ethereum-lists repo: 
+	https://github.com/ethereum-lists/chains/fork
 
 2. ##### Append your chain data
 
