--- a/src/content/docs/quick-start/go-live.mdx
+++ b/src/content/docs/quick-start/go-live.mdx
@@ -16,7 +16,8 @@ of the SKALE Chains use including the core SKALE Hubs: Calypso, Europa, Nebula, 
    Please fill out the onboarding form to help provide key information that will be used throughout the review process.
 
    <a
-      href="#"
+      href="https://onboarding.skale.space"
+      target="_blank"
    >Onboarding Form</a>
    
 2. ### Validate your Smart Contracts
