--- a/src/content/docs/quick-start/index.mdx
+++ b/src/content/docs/quick-start/index.mdx
@@ -12,9 +12,9 @@ import { LinkCard } from '@astrojs/starlight/components';
 
 ## SKALE Network Overview
 
-SKALE is a Layer-1 network offering zero-gas fees and pool secured with limitless sharding.
+SKALE is a network of Layer-1 blockchains offering zero-gas fees and pooled security.
 SKALE also offers an additional security anchor by having key management contracts, the default
-bridge and the network utility token all on the Ethereum Mainnet.
+bridge, and the network's utility token all on the Ethereum Mainnet.
 
 You can learn more about SKALE [here](/learn/about-skale-network).
 
