Fix Delegation Link

--- a/src/content/docs/ecosystem/governance/overview.mdx
+++ b/src/content/docs/ecosystem/governance/overview.mdx
@@ -37,7 +37,7 @@ DAO membership. Staked token holders can vote on DAO proposals.
 
 ## How can I participate?
 
-- [Delegate to a SKALE validator](/ecosystem/delegations/overview).
+- [Delegate to a SKALE validator](https://portal.skale.space/staking).
 - [Vote on SKALE DAO proposals](https://snapshot.org/#/skale.eth)
 - [Become a SKALE Network validator](/ecosystem/validators/overview)
 - [Participate in governance discussions on the SKALE Forum](https://forum.skale.network)
