Add LInk to SKL Token Code

--- a/src/content/docs/ecosystem/delegators/overview.mdx
+++ b/src/content/docs/ecosystem/delegators/overview.mdx
@@ -28,7 +28,7 @@ to ensure that tokens are not actively delegated.
 ### Important Information
 
 - The SKALE Token Address on the Ethereum Mainnet is: [0x00c83aeCC790e8a4453e5dD3B0B4b3680501a7A7](https://etherscan.io/address/0x00c83aeCC790e8a4453e5dD3B0B4b3680501a7A7)
-- GitHub Contract Code can be found [here]()
+- GitHub Contract Code can be found [here](https://github.com/skalenetwork/skale-manager/blob/b039ebebb16a1a2a97a707d7ba6a0f2636413f62/contracts/SkaleToken.sol)
 - SKALE Audits can be found [here](https://github.com/skalenetwork/skale-manager/blob/develop/.github/SECURITY.md)
 
 ## SKL Holder Actions
